# preferred_numbers

./: .gitignore  README.md  pyproject.toml  setup.cfg
.github/workflows/: main.yml
src/preferred_numbers/: __init__.py  preferred_numbers.py
tests/: test_preferred_numbers.py
