[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/preferred_numbers"]

[tool.unittest.test]
test-module = "tests"
test-runner = "unittest"

[project]
name = "preferred-numbers-konayuki002"
version = "0.0.1"
authors = [{ name = "Yukihide Ochi", email = "konayuki0455@gmail.com" }]
description = "This provides the preferred numbers from E-series."
readme = "README.md"
requires-python = ">=3.10.6"
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
license = { text = "MIT Licence" }

[project.optional-dependencies]
dev = ["build"]

[project.urls]
"Homepage" = "https://github.com/konayuki002/preferred-numbers"
"Bug Tracker" = "https://github.com/konayuki002/preferred-numbers/issues"
